--- a/my-books-data/my-books-data.csproj
+++ b/my-books-data/my-books-data.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
-    <Folder Include="Extensions\" />
+    <Folder Include="Extensions\BookEx\" />
+    <Folder Include="Extensions\PublisherEx\" />
   </ItemGroup>
 
 </Project>
